# task-tracker-cli

./: .gitignore  LICENSE  README.md  __main__.py  generate_docs.py  pyproject.toml  setup.py
source/: task_tracker.py  tests.py
source/cli/: commands.py  interface.py  tasks_controller.py
source/cli/models/: model.py  tasks.py
source/cli/models/managers/: file_manager.py  json_manager.py
